--- a/openfda-project/indice.html
+++ b/openfda-project/indice.html
@@ -7,17 +7,18 @@
 <body style = 'background-color: grey'>
 <h1>LISTA</h2>
     <p>Aqui tienes una lista con los archivos del directorio:</p>
-         <form>
+         <form action="/searchDrug">
              Ingrediente activo<br>
              <input type="text" name="active_ingredient"><br>
              <br><br>
              <input type="submit" value="Submit">
+         </form>
+        <form action="/searchDrug">
              <p></p>
              Compañía:<br>
              <input type="text" name="company">
              <br><br>
              <input type="submit" value="Submit">
-
          </form>
 
 </body>
