--- a/openfda-project/indice.html
+++ b/openfda-project/indice.html
@@ -12,14 +12,23 @@
              <input type="text" name="active_ingredient"><br>
              <br><br>
              <input type="submit" value="Submit">
-         </form>
-        <form action="/searchDrug">
+        </form>
+        <form action="/searchCompany">
              <p></p>
              Compañía:<br>
              <input type="text" name="company">
              <br><br>
              <input type="submit" value="Submit">
-         </form>
-
+        </form>
+        <form action="/listDrugs">
+             <p></p>
+             <br>
+             <input type="submit" value="List Drugs">
+        </form>
+        <form action="/listCompanies">
+             <p></p>
+             <br>
+             <input type="submit" value="List Companies">
+        </form>
 </body>
 </html>
