--- a/openfda-project/indice.html
+++ b/openfda-project/indice.html
@@ -8,26 +8,30 @@
 <h1>LISTA</h2>
     <p>Aqui tienes una lista con los archivos del directorio:</p>
          <form action="/searchDrug">
-             Ingrediente activo<br>
-             <input type="text" name="active_ingredient"><br>
-             <br><br>
+             Active ingredient:
+             <input type="text" name="active_ingredient">
+             Limite
+             <input type="text" name="limit">
              <input type="submit" value="Submit">
         </form>
         <form action="/searchCompany">
              <p></p>
-             Compañía:<br>
+             Company:
              <input type="text" name="company">
-             <br><br>
+             Limite
+             <input type="text" name="limit">
              <input type="submit" value="Submit">
         </form>
         <form action="/listDrugs">
              <p></p>
-             <br>
+             Limite
+             <input type="text" name="limit">
              <input type="submit" value="List Drugs">
         </form>
         <form action="/listCompanies">
              <p></p>
-             <br>
+             Limite
+             <input type="text" name="limit">
              <input type="submit" value="List Companies">
         </form>
 </body>
